# src/routes/ingredient.routes.ts
@@ -1,9 +1,10 @@
 import { Router } from 'express';
-import { getAllIngredients, getRecipesByIngredients } from '../controllers/ingredient.controller';
+import { getAllIngredients, getRecipesByIngredients, createIngredient } from '../controllers/ingredient.controller';
 
 const router = Router();
 
 router.get('/', getAllIngredients);
+router.post('/', createIngredient);
 router.get('/recipes', getRecipesByIngredients);
 
 export default router;
